Update to VaultHunters v12